FullSb1-27-apr-15/src/objects/NetDensity_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NetDensities Role</relationshipLabel>
        <relationshipName>NetDensities_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetDensity__c</fullName>
        <label>NetDensity</label>
        <referenceTo>NetDensity__c</referenceTo>
        <relationshipLabel>NetDensities Role</relationshipLabel>
        <relationshipName>NetDensities_Role</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Hiring Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter/HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Sourced Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Sourced FT Job</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NetDensity Role</label>
    <nameField>
        <displayFormat>NDR-{000000}</displayFormat>
        <label>NetDensity Role No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NetDensities Role</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>